--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -10,21 +10,23 @@
 
 <div id="emails-view">
   <table class="table table-striped">
-    <tbody class="table-body"></tbody>
+    <tbody id="table-body"></tbody>
   </table>
 </div>
 
 <div id="compose-view">
   <h3>New Email</h3>
-  <form id="compose-form" id="#mail-form">
+  <form id="compose-form">
     <div class="form-group">
-      From: <input disabled class="form-control" value="{{ request.user.email }}" />
+      From: <input disabled class="form-control" value="{{ request.user.email }}" name="sender" />
     </div>
-    <div class="form-group">To: <input id="compose-recipients" class="form-control" /></div>
     <div class="form-group">
-      <input class="form-control" id="compose-subject" placeholder="Subject" />
+      To: <input id="compose-recipients" class="form-control" name="recipients" />
     </div>
-    <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
+    <div class="form-group">
+      <input class="form-control" id="compose-subject" placeholder="Subject" name="subject" />
+    </div>
+    <textarea class="form-control" id="compose-body" placeholder="Body" name="body"></textarea>
     <input type="submit" class="btn btn-primary" />
   </form>
 </div>
