change table on list, add btn del

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -9,9 +9,7 @@
 <hr />
 
 <div id="emails-view">
-  <table class="table table-striped">
-    <tbody id="table-body"></tbody>
-  </table>
+  <ul id="emails-list" class="table table-striped"></ul>
 </div>
 
 <div id="compose-view">
