change class and add test event on li

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -9,7 +9,7 @@
 <hr />
 
 <div id="emails-view">
-  <ul id="emails-list" class="table table-striped"></ul>
+  <ul id="emails-list" class=""></ul>
 </div>
 
 <div id="compose-view">
