--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -28,6 +28,8 @@
     <input type="submit" class="btn btn-primary" />
   </form>
 </div>
+
+<div id="email-view"></div>
 {% endblock %} {% block script %}
 <script src="{% static 'mail/inbox.js' %}"></script>
 {% endblock %}
